--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Titulo del post</title>
-</head>
-<body>
-<h1>aaaaaaa</h1>
-<p>aaaaaaaa</p>
-</body>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
+            </div>
+        </div>
+    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'62293eaf5f96ad5a',m:'7072bd4102b9c57a284d7eacedb77fd82b882fde-1613499230-1800-AUftyQBgvjE4/7oS0Iap7EymFDwA71rWWYJWj6TjxbT8XeYjvCkXN8RnkgG5F2IYcc5W0SWZO88QdO/3z4LaCS5jMiXQX+7pj+/vYs10Be0ShyvMKGtJ9UluknidBJ2Qny0g9sSZnumUZwPGU4B14vf9kAVlNX+qvbWOL3AILHVn37x0zSY93UQZZRgjg4ZRDgWV478MVotaGuLiECN40dZ2Q8W1MxSdGydzt/pZhOJugDH3jmAwbBpO1wKxJaWQug==',s:[0x765e374e37,0xf815d7c203],}})();</script></body>
 </html>
