--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
                 <p>Suscribete y dale like</p>
 
 
-                <p>Hola soy Nayib Maguiña Fajardo, Gasasaaaxwdc,okw chjwed cwbdnzsnweb
+                <p>Hola soy Nayib Maguiña Fajardo, Gasasaaaxwdc,okw chjwed cwbdnzsnwesasasasaasab
                 </p>
 
 
