--- a/blogpost.html
+++ b/blogpost.html
@@ -6,24 +6,12 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                Cabecera
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-
-                
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-
-                <p>Suscribete y dale like</p>
-
-
-                <p>Hola soy Nayib Maguiña Fajardo, Gasasaaaxwdc,okw chjwed cwbdnzsnweb</p>
-
-
-
             </div>
         </div>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'62293eaf5f96ad5a',m:'7072bd4102b9c57a284d7eacedb77fd82b882fde-1613499230-1800-AUftyQBgvjE4/7oS0Iap7EymFDwA71rWWYJWj6TjxbT8XeYjvCkXN8RnkgG5F2IYcc5W0SWZO88QdO/3z4LaCS5jMiXQX+7pj+/vYs10Be0ShyvMKGtJ9UluknidBJ2Qny0g9sSZnumUZwPGU4B14vf9kAVlNX+qvbWOL3AILHVn37x0zSY93UQZZRgjg4ZRDgWV478MVotaGuLiECN40dZ2Q8W1MxSdGydzt/pZhOJugDH3jmAwbBpO1wKxJaWQug==',s:[0x765e374e37,0xf815d7c203],}})();</script></body>
+    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6231057f9d2da11a',m:'88ae19ba682bc443870881f8ab7a5bbb3de358b6-1613580774-1800-AR9qJulz1ZYNqtM6rpO1JCtHWbeTeKZw6FNUCCIuGdo7d1coN7g408f7rzzuMCJov99dbnt80DMJvL0SRs8mA2eiyM7SgtkjP7pYFHqq4nwBqtLiH19WUh4pZvtUkzaJfQQwm6FnY24NiBnWpSkoKd3DJPK6GzzCm6jUc2mUDouTeG16o46LC7VJ70oOmxwjXU3Yn/2FNy58mykSg3ycvAmpnPNdANtKXocEGWNFCTLy5/9M1IhnD+5ki41osoPz2A==',s:[0x3b79538649,0x4409fe1479],}})();</script></body>
 </html>
