Agrege el css de colorcitos xd

--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,15 @@
                 <p>Hola soy Nayib Maguiña Fajardo, Gasasaaaxwdc,okw chjwed cwbdnzsnwesasasasaasab
                 </p>
 
+                <p>gaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, aaaaaaaaaaaaaaaaaaaaaaaa
+                	aaaaaaaaaaaaaaaaaaaaaaaaaaa
+                	a
+                	a
+                	a
+                	saqs
+                	weplwecuoiociosachsaxsacnsanikpqsscn
+                </p>
+
 
 
             </div>
