--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,24 @@
 <html>
     <head>
-        <title>El titulo del post ga xd</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
             </div>
+	    <div id="footer">
+		Hecho con amor en Platzi &lt;3
+	    </div>
         </div>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'6231057f9d2da11a',m:'88ae19ba682bc443870881f8ab7a5bbb3de358b6-1613580774-1800-AR9qJulz1ZYNqtM6rpO1JCtHWbeTeKZw6FNUCCIuGdo7d1coN7g408f7rzzuMCJov99dbnt80DMJvL0SRs8mA2eiyM7SgtkjP7pYFHqq4nwBqtLiH19WUh4pZvtUkzaJfQQwm6FnY24NiBnWpSkoKd3DJPK6GzzCm6jUc2mUDouTeG16o46LC7VJ70oOmxwjXU3Yn/2FNy58mykSg3ycvAmpnPNdANtKXocEGWNFCTLy5/9M1IhnD+5ki41osoPz2A==',s:[0x3b79538649,0x4409fe1479],}})();</script></body>
+    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'624bb20a3966a11a',m:'fc51c0d83c2f8746317b54dcf142a6c7a8e87bbb-1613860472-1800-AU5wCG2qKj7oZsXwHEYnnaJD81Qm8Rjip6BoqcOmUbwfAjG9iCwcVWXIihhchMxENlKxUNZXZxLRM1lKPz/Sfib/2dbAOJJxcBYximGHWm9fIP1wGB+ikTx+ENDMtNclrADeobMNhgc2tw/n0GRB0/okZ9vN+XdhvGGmnJPquyn0TzC4xbkNpjsjelzKzVBWZRKo7wUkHF0KGxJr3rst5GKaDpIuWeZVbv2cFwrmO+0HsZfe5iUI6umZgnaOblsLQw==',s:[0x9e017daa80,0xd91b956840],}})();</script></body>
 </html>
