agrege una imagen xd ga :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog 2.0</title>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
         <link rel="stylesheet" href="css/estilos.css" />
     <script async src='/cdn-cgi/bm/cv/669835187/api.js'></script></head>
     <body>
@@ -11,14 +11,15 @@
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <h1>Este es el titulo atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/random.jpg" width="50%" /></p>
+                <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
 	    <div id="footer">
 		Hecho con amor en Platzi &lt;3
 	    </div>
         </div>
-    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'624bb20a3966a11a',m:'fc51c0d83c2f8746317b54dcf142a6c7a8e87bbb-1613860472-1800-AU5wCG2qKj7oZsXwHEYnnaJD81Qm8Rjip6BoqcOmUbwfAjG9iCwcVWXIihhchMxENlKxUNZXZxLRM1lKPz/Sfib/2dbAOJJxcBYximGHWm9fIP1wGB+ikTx+ENDMtNclrADeobMNhgc2tw/n0GRB0/okZ9vN+XdhvGGmnJPquyn0TzC4xbkNpjsjelzKzVBWZRKo7wUkHF0KGxJr3rst5GKaDpIuWeZVbv2cFwrmO+0HsZfe5iUI6umZgnaOblsLQw==',s:[0x9e017daa80,0xd91b956840],}})();</script></body>
+    <script type="text/javascript">(function(){window['__CF$cv$params']={r:'625a399e580b36e7',m:'f9edc367dad04e3e4b7102b6f6f9db9b1cbb502f-1614012826-1800-AfNAv66UVytXbu3pg2yfeHVRSofzy3KG1WFXGmQzeJXvgyQ9HW51ifsJm1Qdl13xYOgsRlxHfiOtlavhVy+PQ+0pIqUz8xhFHjR2GDqkz3FDEnEoqMEnT3Kd/J0UfVjlsIxsrUsK3sGJr2bnS7nBJob7NYJX9787m4eARh2SnInVRwakIakEnRqfNSXtq4altSs8qVzpRvHoEJNhj4CuHYS7SiJ2w0RwQd+E7KrU6KQFrqW7XxteIqaoTtm/nSVfVg==',s:[0xdddd1c97e2,0xe4efda1a7f],}})();</script></body>
 </html>
